<resources>
    <string name="app_name" translatable="false">Backloggd</string>
    <string name="error_loading_page">Error loading page.\nPlease check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="nav_home">Home</string>
    <string name="nav_log_game">Log a game</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">My profile</string>
    <string name="nav_more">More</string>
    <string name="login_required">Please log in to view your profile.</string>
    <string name="fetching_username">Loading your profile…</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="drawer_notifications">Notifications</string>
    <string name="drawer_played">Played</string>
    <string name="drawer_playing">Playing</string>
    <string name="drawer_backlog">Backlog</string>
    <string name="drawer_wishlist">Wishlist</string>
    <string name="drawer_journal">Journal</string>
    <string name="drawer_activity">Activity</string>
    <string name="drawer_reviews">Reviews</string>
    <string name="drawer_lists">Lists</string>
    <string name="drawer_friends">Friends</string>
    <string name="drawer_likes">Likes</string>
    <string name="drawer_stats">Stats</string>
    <string name="drawer_backloggd_settings">Backloggd Settings</string>
    <string name="drawer_app_settings">App Settings</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_feedback">App Feedback</string>
    <string name="feedback_no_email_app">No email app installed.</string>
    <string name="no_app_for_link">No app found to open this link.</string>
    <string name="drawer_about">About</string>
    <string name="about_close">Close</string>
    <string name="about_this_app">About this app</string>
    <string name="about_backloggd">About Backloggd</string>
    <string name="about_contact">Contact</string>
    <string name="about_backers">Backers</string>
    <string name="about_roadmap">Roadmap</string>
    <string name="about_terms">Terms of Service</string>
    <string name="about_privacy">Privacy Policy</string>
    <string name="about_changelog">Backloggd changelog</string>
    <string name="about_igdb">Game data powered by IGDB</string>
    <string name="update_available_title">Update Available</string>
    <string name="update_available_message">A new version (%1$s) is available. Would you like to download it?</string>
    <string name="update_download">Download</string>
    <string name="update_later">Later</string>
    <string name="whats_new_title">What\'s new in %1$s</string>
    <string name="whats_new_dismiss">Got it</string>
    <string name="shortcut_log_game_short">Log a game</string>
    <string name="shortcut_log_game_long">Log a game</string>
    <string name="shortcut_search_short">Search</string>
    <string name="shortcut_search_long">Search games</string>
    <string name="shortcut_profile_short">Profile</string>
    <string name="shortcut_profile_long">My profile</string>
    <string name="file_chooser_unavailable">No app available to pick a file.</string>
    <string name="download_started">Downloading %1$s…</string>
    <string name="download_show">Show</string>
    <string name="download_unsupported">This file cannot be downloaded.</string>
    <string name="notification_channel_name">Backloggd Notifications</string>
    <string name="notification_channel_description">Channel for new backloggd.com notifications</string>
    <string name="notification_title_badge">New Badge</string>
    <string name="notification_title_follower">New Follower</string>
    <string name="notification_title_like">New Like</string>
    <string name="notification_title_comment">New Comment</string>
    <string name="notification_title_default">Backloggd</string>
    <string name="wishlist_channel_name">Wishlist Game Releases</string>
    <string name="wishlist_channel_description">Notifications for when games on your wishlist get a release date.</string>
    <string name="wishlist_notification_title">Releasing Today!</string>
    <string name="wishlist_notification_message">%1$s releases today.</string>
</resources>
